--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="user hide-details" id="user-box">
-      <img src="images/user.jpg" onclick="openinfo()" />
+      <img src="images/wp4471388-1024x1024-wallpapers.jpg" onclick="openinfo()" />
       <div class="info">
-        <h1>@anas_la_ghr</h1>
+        <h1>@Gokul_S_V_</h1>
         <p>Working as a priduct manager at <span> Microsoft Inc. </span></p>
         <p>From: Morocco,</p>
         <a href="#">Connect with me</a>
